# static_analysis_metrix

./: .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  conanfile.py
include/interfaces/: iresource.h
sample/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_sample.cpp
